unpackaged/main/default/objects/ucinn_ascendv2__Degree_Information__c/fields/NU_ADV_Academic_Unit1__c.field-meta.xml
<CustomField>
    <fullName>NU_ADV_Academic_Unit1__c</fullName>
    <label>Academic Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DMSB</fullName>
            </value>
            <value>
                <fullName>COE</fullName>
            </value>
            <value>
                <fullName>CSC</fullName>
            </value>
            <value>
                <fullName>CPS</fullName>
            </value>
            <value>
                <fullName>CSH</fullName>
            </value>
            <value>
                <fullName>MISC</fullName>
            </value>
            <value>
                <fullName>KCCS</fullName>
            </value>
            <value>
                <fullName>CAM</fullName>
            </value>
            <value>
                <fullName>BHS</fullName>
            </value>
            <value>
                <fullName>NUSL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>