unpackaged/main/default/objects/ucinn_ascendv2__Degree_Information__c/fields/NU_ADV_Enrollment_Status__c.field-meta.xml
<CustomField>
    <fullName>NU_ADV_Enrollment_Status__c</fullName>
    <label>Enrollment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WithdrawnDONOTUSE</fullName>
            </value>
            <value>
                <fullName>Clinical</fullName>
            </value>
            <value>
                <fullName>Eligible to Register</fullName>
            </value>
            <value>
                <fullName>Leave of Absence</fullName>
            </value>
            <value>
                <fullName>Not allowed to Register</fullName>
            </value>
            <value>
                <fullName>On Vacation</fullName>
            </value>
            <value>
                <fullName>Study Abroad</fullName>
            </value>
            <value>
                <fullName>Withdrawn After Stats</fullName>
            </value>
            <value>
                <fullName>Withdrawn Prior to Stats</fullName>
            </value>
            <value>
                <fullName>On Coop</fullName>
            </value>
            <value>
                <fullName>No Show</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>