unpackaged/main/default/objects/ucinn_ascendv2__Degree_Information__c/fields/NU_ADV_Student_Level__c.field-meta.xml
<CustomField>
    <fullName>NU_ADV_Student_Level__c</fullName>
    <label>Student Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Undergraduate</fullName>
            </value>
            <value>
                <fullName>Graduate</fullName>
            </value>
            <value>
                <fullName>Law</fullName>
            </value>
            <value>
                <fullName>CPS - Undergraduate Semester</fullName>
            </value>
            <value>
                <fullName>CPS - Undergraduate Quarter</fullName>
            </value>
            <value>
                <fullName>CPS - Graduate</fullName>
            </value>
            <value>
                <fullName>Continuing Education</fullName>
            </value>
            <value>
                <fullName>Undergrad Special</fullName>
            </value>
            <value>
                <fullName>Graduate Specialty Semester</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>