unpackaged/main/default/objects/ucinn_ascendv2__Degree_Information__c/fields/NU_ADV_Student_Status__c.field-meta.xml
<CustomField>
    <fullName>NU_ADV_Student_Status__c</fullName>
    <label>Student Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active Registered</fullName>
            </value>
            <value>
                <fullName>Active Not Registered</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Inactive Due to Graduation</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>