unpackaged/main/default/objects/ucinn_ascendv2__Degree_Information__c/recordTypes/School_Degree_Student_Infomation.recordType-meta.xml
<RecordType>
    <fullName>School_Degree_Student_Infomation</fullName>
    <active>true</active>
    <description>Information about a current student's degree which is from this university</description>
    <label>School Degree Student Infomation</label>
</RecordType>