unpackaged/main/default/objects/ucinn_ascendv2__Degree_Information__c/recordTypes/ucinn_ascendv2__Non_School_Degree_Information.recordType-meta.xml
<RecordType>
    <fullName>ucinn_ascendv2__Non_School_Degree_Information</fullName>
    <active>true</active>
    <description>Information about a non-school degree.</description>
    <label>Non-School Degree Information</label>
</RecordType>